--- a/nonOOP/index.html
+++ b/nonOOP/index.html
@@ -47,7 +47,8 @@ Grading Criteria:
 	<div class='next'></div>	
 </div>
 
-<div class='songPath'></div>	
+<div class='songPath'></div>
+<div class='upNext'></div>	
 
 </div>
 
