--- a/nonOOP/index.html
+++ b/nonOOP/index.html
@@ -65,7 +65,7 @@ Grading Criteria:
 </body>
 </html>
 
-<!-- CREDITS
+<!-- MEDIA CREDITS
 
 90 Seconds of Funk by Audionautix is licensed under a Creative Commons Attribution license (https://creativecommons.org/licenses/by/4.0/)
 Artist: http://audionautix.com/
